--- a/src/index.pcss
+++ b/src/index.pcss
@@ -15,3 +15,10 @@
     -moz-appearance: textfield !important;
   }
 }
+
+body {
+  @apply p-0;
+  @apply m-0;
+  @apply min-h-screen;
+  @apply bg-base-200;
+}
